# fakio

./: .gitignore  .travis.yml  Cargo.toml  MIT-LICENSE.txt  Makefile  README.md  appveyor.yml  config.c  config.h  event.c  fakio.conf  fbuffer.h  fcontext.c  fcontext.h  fcrypt.c  fcrypt.h  fevent.c  fevent.h  flocal.c  flog.h  fnet.c  fnet.h  fserver.c  local.c  rustfmt.toml  server.c
clients/: config.conf  config.json  fclient.c  fclient.go
clients/FakioClient/: Fakio.pro  Fakio.qrc  fakio.rc  fakioconfig.cpp  fakioconfig.h  fakiowindow.cpp  fakiowindow.h  fakiowindow.ui  main.cpp
conf/: client.toml  server.toml
docs/: benchmark.txt  fakio.conf  protocol.txt  supervisord.conf
example/: document.md  document.txt  fakio.conf
src/: buffer.rs  client.rs  config.rs  crypto.rs  fakio.h  fbuffer.c  fbuffer.h  fcommon.h  fconfig.c  fconfig.h  fcontext.c  fcontext.h  fcontexts.c  fcontexts.h  fcrypt.c  fcrypt.h  fevent.c  fevent.h  fhandler.c  fhandler.h  flog.h  fnet.c  fnet.h  fserver.c  fuser.c  fuser.h  futils.c  futils.h  lib.rs  net.rs  server.rs  socks5.rs  transfer.rs  util.rs
src/base/: aes.c  aes.h  fevent.c  fevent.h  hashmap.c  hashmap.h  ini.c  ini.h  minheap.h  sha2.c  sha2.h
test/: benchmark.txt  fbench.c  fbench.go  local.py  supervisord.conf  test_config.c  test_crypt.c  test_minheap.c  test_net.c  test_sha256.c  test_timer.c  testfakio.conf
tools/: before_deploy.sh  com.serholiu.fakio.plist  fakio.service  fbench.go  supervisord.conf
