[package]
name = "fakio"
version = "0.1.0"
authors = ["Serho Liu <serholiu@gmail.com>"]

[lib]
name = "fakio"

[[bin]]
name = "fakio-client"
path = "src/bin/client.rs"

[[bin]]
name = "fakio-server"
path = "src/bin/server.rs"

[dependencies]
log = "0.3"
time = "0.1"
ansi_term = "0.9"
env_logger = "0.3"
futures = "0.1"
futures-cpupool = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
tokio-proto = "0.1"
ring = "0.11"
rand = "0.3"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"