[package]
name = "fakio"
version = "0.2.0"
authors = ["Serho Liu <serholiu@gmail.com>"]

[lib]
name = "fakio"

[[bin]]
name = "fakio-client"
path = "src/bin/client.rs"

[[bin]]
name = "fakio-server"
path = "src/bin/server.rs"

[dependencies]
log = "0.4"
time = "0.1"
ansi_term = "0.11"
env_logger = "0.5"
futures = "0.1"
tokio = "0.1"
tokio-threadpool = "0.1"
ring = "0.13"
rand = "0.5"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
mio = "0.6"
